Bug fix: incorrect display on mobile

--- a/barchartstyles.css
+++ b/barchartstyles.css
@@ -33,7 +33,8 @@ body {
       text-align: center;
       width: 250px;
       height: 0px;
-      left: -160px;
+      left: -200px;
+      margin-left: 40px;
       -webkit-transform:rotate(-90deg);
       -moz-transform:rotate(-90deg);
       -o-transform: rotate(-90deg);
